# it_ops_platform

./: .env.example  .gitignore  README.md  alembic.ini  it_ops_platform.sql  pyproject.toml
alembic/: env.py
app/: main.py
app/api/mobile/routes/: tickets.py
app/api/v1/: router.py
app/api/v1/routes/: _serializers.py  assets.py  dashboard.py  dicts.py  sla_rules.py  ticket_assignment_rules.py  ticket_categories.py  tickets.py  users.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  asset.py  operation_log.py  sla_rule.py  ticket.py  ticket_assignment.py  ticket_category.py  user.py
app/scheduler/: jobs.py
app/schemas/: asset.py  mobile.py  sla_rule_schema.py  ticket.py  ticket_assignment_schema.py  ticket_category_schema.py  user.py
app/services/: asset_service.py  dashboard_service.py  mobile_service.py  sla_service.py  ticket_assignment_service.py  ticket_category_service.py  ticket_service.py  todo_service.py  user_service.py
db/: it_ops_platform.sql
docs/: admin-api-v1.md  mobile-api.md
tests/: test_health.py  test_sla_service.py  test_ticket_assignment_service.py  test_todo_service.py  test_user_batch_delete.py
